--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-<<<<<<< HEAD
+
   "name": "internships",
-=======
-  "name": "Typescript_nodejs_typeorm_boiletplate",
->>>>>>> ea604bf (Add existing project files to Git)
+
+ 
+
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./src/app.ts",
+    "start:dev": "nodemon ./src/index.ts",
     "build": "tsc -p .",
-    "start:prod": "node ./dist/app.js"
+    "start:prod": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-<<<<<<< HEAD
+
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.3",
@@ -24,16 +24,14 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-=======
+
   "dependencies": {
     "dotenv": "^16.3.1",
->>>>>>> ea604bf (Add existing project files to Git)
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
-<<<<<<< HEAD
-=======
+
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -41,6 +39,6 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
->>>>>>> ea604bf (Add existing project files to Git)
+
   }
-}
+}}
